[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyTools_JuyeopKim"
version = "0.0.1"
authors = [
    { name="Juyeop Kim", email="juyeopkim@yonsei.ac.kr" },
]
description = "PyTools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yupeeee/PyTools"
"Bug Tracker" = "https://github.com/yupeeee/PyTools/issues"